reject the null

--- a/eat.Rmd
+++ b/eat.Rmd
@@ -14,6 +14,9 @@ date: "`r Sys.Date()`"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+# Introduction
+Is there a relationship between different ethnic groups and the rate at which they go out to eat.
+
 ## There were two years in which the General Social Survey asked about the frequency of eating out.
 ### Find those years and for the first year the question was asked download that years data in a stata format - its name will be "GSSxxxx.dta" where the xxxx is replaced by the year.  For example if the year was 1983 its name would be GSS1983.dta. Your assignment is to download the GSS yearly dataset for the first year the question was asked and then  write up the answer to the question by editing the  code block in line 31 to eval=TRUE and finish the job. 
 
@@ -28,17 +31,43 @@ require(tigerstats)
 require(knitr)
 require(foreign)
 ```
-```{r, eval=FALSE}
-GSS <-read.dta(file="GSSxxxx.dta")
+```{r, eval=TRUE}
+GSS <- readstata13::read.dta13(file="GSS1996.dta")
 GSS <- droplevels(GSS)
 mydata <- select(GSS,race,age,eatout)
 mydata <- na.omit(mydata)
 ```
 
+# Method
+The variables of the study is Cat~num
+
+# Descriptive Results
+
+## Graphical results
+
+```{r}
+barchartGC(~race + eatout,data=mydata)
+barchartGC(~race + eatout,data=mydata, type="percent")
+```
+These graphs show there is a relationship between ethnic groups and the amount of times they go out to eat
+
+## Numerical descriptive results
+
+```{r}
+table1 <- xtabs(~race + eatout, data=mydata)
+rowPerc(table1)
+colPerc(table1)
+```
+
+## Inferential results
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
 
 
+# Discussion and Conclusion 
 
-
-
-
-
+ i reject the null hypothesis due to the P value which is very small. Therefore i conclude there is a relationship between ethnic groups and the rate at which they go out to eat.
